--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -54,11 +54,11 @@ table {
 
 html, body {
     height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Thasadith', sans-serif;
 }
 
 h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
+    font-family: 'Thasadith', cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
@@ -66,34 +66,70 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
-body {
-	padding: 0 10%;
+header {
+	z-index: 100;
+	position: fixed;
+	width: 100%;
+	height: 70px;
+	background: rgba(255,255,255,0.95);
+	box-shadow: 0 8px 16px rgba(0,0,0,0.1); 
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
-header nav a {
-	padding-top: 30px;
-	display: inline-block;
+nav {
+	width: 50%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 
 a {
 	width: 12%;
+	text-align: center;
 	color: rgb(120,120,120);
 	text-decoration: none;
+	transition: transform 0.5s;
 }
 
-.logo {
-	position: absolute;
-	top: 20px;
-	right: 10%;
+a:hover {
+	transform: scale(1.2);
+}
+
+.background-img {
+	z-index: -2;
+	position: fixed;
+	top: -150px;
+	right: 20px;
+	height: 100vh;
+	width: 50%;
+	background: url("../img/header-img.png");
+	background-size:cover;
+}
+
+.background-circle:after{
+	z-index: -1;
+    content:'';
+    position: absolute;
+    right: 15%; top: 25%;
+    border-radius: 100%;
+    width:400px; height:400px;
+    box-shadow: 0px 0px 0px 2000px #fff;
+}
+
+main {
+	position: relative;
+	padding: 0 15%;
+	height: 100vh;
+	width: 100%;
+	overflow: hidden;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 main div {
-	height: 70vh;
-	padding-top: 80px;
-	width: 49%;
-	display: inline-block;
-	vertical-align: center;
-	line-height: 1.2;
 	text-align: center;
 }
 
@@ -101,31 +137,61 @@ main div h1 {
 	font-size: 90px;
 }
 
-main div button {
+button {
 	height: 40px;
 	width: 170px;
 	background: none;
 	font-size: 16px;
-	border: solid 1px black;
+	border: none;
+	border-radius: 5px;
+	background: rgb(240,240,240);
+	box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+	transition: transform 0.5s, box-shadow 0.5s;
 }
 
-section, footer {
-	padding: 20px 0;
+button:hover {
+	cursor: pointer;
+	transform: translateY(-3);
+	box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+button:active {
+	box-shadow: none;
+}
+
+article {
+	background: rgb(240,240,240);
+	padding: 70px 10%;
+}
+
+section {
+	padding: 10px 0;
+	display: flex;
+	justify-content: space-around;
+}
+
+section div {
+	padding: 20px;
+	text-justify: newspaper;
+	line-height: 1.5;
+}
+
+h2 {
+	font-size: 25px;
 }
 
 .middle-img {
+	padding: 0 20px;
 	width: 100%;
 }
 
-.info-section div {
-	display: inline-block;
-	width: 49%;
-	line-height: 1.2;
+footer {
+	background: white;
+	padding: 50px calc(10% + 20px);
+	line-height: 1.5;
 }
 
-.services-section div {
-	display: inline-block;
-	width: 33%;
-	line-height: 1.2;
+small {
+	color: rgb(90,90,90);
+	font-size: 12px;
 }
-
